Added delete /contacts/:contactID route.
