# src/config/swagger.json
@@ -24,7 +24,7 @@
         "tags": ["Contacts"],
         "summary": "Creates contact.",
         "responses": {
-          "200": { "description": "OK", "schema": { "$ref": "#/definitions/Contact" } },
+          "201": { "description": "OK", "schema": { "$ref": "#/definitions/Contact" } },
           "400": { "description": "Bad request", "schema": { "$ref": "#/definitions/Error" } },
           "500": { "description": "Internal server error", "schema": { "$ref": "#/definitions/Error" } }
         },
@@ -83,6 +83,24 @@
             "required": true,
             "description": "Changes to update the contact with.",
             "schema": { "$ref": "#/definitions/ContactUpdate" }
+          }
+        ]
+      },
+      "delete": {
+        "tags": ["Contacts"],
+        "summary": "Deletes contact.",
+        "responses": {
+          "204": { "description": "OK" },
+          "400": { "description": "Bad request", "schema": { "$ref": "#/definitions/Error" } },
+          "500": { "description": "Internal server error", "schema": { "$ref": "#/definitions/Error" } }
+        },
+        "parameters": [
+          {
+            "name": "contactID",
+            "in": "path",
+            "required": true,
+            "description": "ID of contact to delete.",
+            "type": "string"
           }
         ]
       }
